tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@slice_invalid_step.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/slice_invalid_step.txt
---
error: Slice step must be an integer, got `string`
 --> slice_invalid_step.txt:1:14
  |
1 | {{ numbers[::name] }}
  |              ^^^^
